aiatt-tool-dashboard/k8s-manifests/prod/service-tool-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: at-ai-tool-dashboard
  namespace: advtech
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: at-ai-tool-dashboard
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: at-ai-tool-dashboard
