aiatt-tool-dashboard/k8s-manifests/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: at-ai-tool-dashboard-ingress
  namespace: advtech
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: "at-ai-tool-dashboard-ssl-cert-prod"
    kubernetes.io/ingress.class: "gce-internal"
    kubernetes.io/ingress.regional-static-ip-name: "at-ai-tool-dashboard-static-ip-prod"
    networking.gke.io/suppress-firewall-xpn-error: "true"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - http:
        paths:
          - path: /Dashboard/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: at-ai-tool-dashboard
                port:
                  number: 8080
          - path: /transfer/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: at-ai-att-fe-ui
                port:
                  number: 8080
  defaultBackend:
    service:
      name: at-ai-tool-dashboard
      port:
        number: 8080
